@@ -11,7 +11,11 @@
 	mysql_connect ($dbServer, $dbUsername, $dbPassword) or die ('<b>Database connection error:</b> ' . mysql_error());
 	mysql_select_db ($dbDatabase);
 
-	$query = "INSERT INTO $strThread ($rowPID, $rowTimestamp, $rowIPAddress, $rowUsername, $rowPassword, $rowMessage) VALUES ('', '$date', '$strIPAddress', '".mysql_real_escape_string($strUsername)."', '".mysql_real_escape_string($strPassword)."', '".mysql_real_escape_string($strMessage)."')";
+	// Save whether or not the post should be marked as a moderator/distinguished (highlighted) post
+	if($strPassword == hashPassword('admin'))
+		$query = "INSERT INTO $strThread ($rowPID, $rowTimestamp, $rowIPAddress, $rowUsername, $rowPassword, $rowMessage, $rowIsModerator) VALUES ('', '$date', '$strIPAddress', '".mysql_real_escape_string($strUsername)."', '".mysql_real_escape_string($strPassword)."', '".mysql_real_escape_string($strMessage)."', '1')";
+	else
+		$query = "INSERT INTO $strThread ($rowPID, $rowTimestamp, $rowIPAddress, $rowUsername, $rowPassword, $rowMessage, $rowIsModerator) VALUES ('', '$date', '$strIPAddress', '".mysql_real_escape_string($strUsername)."', '".mysql_real_escape_string($strPassword)."', '".mysql_real_escape_string($strMessage)."', '0')";
 	
 	mysql_query($query) or die ('<b>Error saving post to database.</b> <br /> ' . mysql_error());
 
@@ -22,6 +26,9 @@
 	echo "<b>IP Address:</b> " . $strIPAddress . "<br />";
 	echo "<b>Message:</b> " . $strMessage . "<br /><br />";
 
+	if($strPassword == hashPassword('admin'))
+		echo "<b>Distinguished:</b> true<br /><br />";
+	
 	echo "<b>Time:</b> " . $date . "<br /><br />";
 	
 	// TODO: Get post id from database (by timestamp would cause an issue if messages were posted at the exact same time)
